include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${DRM_INCLUDE_DIRS}
  ${BOOST_FILESYSTEM_INCLUDE_DIRS}
  ${BOOST_SYSTEM_INCLUDE_DIRS}
  )

file(GLOB XRT_IMPL_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
  )

#source_group(XRT_XOCL_API_FILES FILES ${XRT_XOCL_API_FILES})
#source_group(XRT_XOCL_CORE_FILES FILES ${XRT_XOCL_CORE_FILES})
#source_group(XRT_XOCL_XCLBIN_FILES FILES ${XRT_XOCL_XCLBIN_FILES})

set(XRT_IMPL_ALL_SRC
  ${XRT_IMPL_FILES}
  )

add_library(impl OBJECT ${XRT_IMPL_ALL_SRC})
