include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${DRM_INCLUDE_DIRS}
  )

file(GLOB XRT_XCLBIN_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
  )

#source_group(XRT_XOCL_API_FILES FILES ${XRT_XOCL_API_FILES})
#source_group(XRT_XOCL_CORE_FILES FILES ${XRT_XOCL_CORE_FILES})
#source_group(XRT_XOCL_XCLBIN_FILES FILES ${XRT_XOCL_XCLBIN_FILES})

set(XRT_XCLBIN_ALL_SRC
  ${XRT_XCLBIN_FILES}
  )

add_library(xclbin OBJECT ${XRT_XCLBIN_ALL_SRC})
